[package]
name = "raytrace"
version = "0.1.0"
authors = ["Epsylon <eepsylon.3@gmail.com>"]
edition = "2018"

[lib]
name = "rtlib"
path = "src/rtlib.rs"
crate-type=["cdylib", "rlib"]

[[bin]]
name = "raytrace"
path = "src/main.rs"

[features]
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
nalgebra = "0.18"
ncollide3d = "0.20"
serde = "1.0.85"
ron = "0.4.1"
rayon = "1.0.3"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3.10", optional = true }
png = "0.14.0"
